<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/spacing_large"
    android:paddingBottom="@dimen/spacing_medium">

    <TextView
        android:id="@+id/step_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.NoteUp.Caption"
        android:textColor="@color/noteup_fg_brand" />

    <ViewFlipper
        android:id="@+id/step_flipper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/onboarding_input_title"
                android:textAppearance="@style/TextAppearance.NoteUp.Title" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:text="@string/onboarding_input_description"
                android:textAppearance="@style/TextAppearance.NoteUp.Body" />

            <RadioGroup
                android:id="@+id/input_mode_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/stylus_only_option"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/control_height"
                    android:text="@string/canvas_input_mode_stylus_only" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/touch_input_option"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/control_height"
                    android:text="@string/canvas_input_mode_stylus_touch" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/onboarding_pen_title"
                android:textAppearance="@style/TextAppearance.NoteUp.Title" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:text="@string/onboarding_pen_description"
                android:textAppearance="@style/TextAppearance.NoteUp.Body" />

            <RadioGroup
                android:id="@+id/pen_thickness_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:orientation="horizontal">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/thin_pen_option"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/pen_thin" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/medium_pen_option"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/pen_medium" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/thick_pen_option"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/pen_thick" />
            </RadioGroup>

            <com.kotlinsun.noteup.ui.onboarding.PenSetupPreviewView
                android:id="@+id/pen_preview"
                android:layout_width="match_parent"
                android:layout_height="@dimen/onboarding_preview_height"
                android:layout_marginTop="@dimen/spacing_medium"
                android:background="@drawable/bg_onboarding_preview"
                android:contentDescription="@string/onboarding_pen_preview" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/clear_preview_button"
                style="@style/Widget.NoteUp.Button.Utility"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/clear_preview" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/onboarding_gesture_title"
                android:textAppearance="@style/TextAppearance.NoteUp.Title" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:text="@string/onboarding_gesture_description"
                android:textAppearance="@style/TextAppearance.NoteUp.Body" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:text="@string/onboarding_pdf_description"
                android:textAppearance="@style/TextAppearance.NoteUp.Body" />
        </LinearLayout>
    </ViewFlipper>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        android:gravity="end"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/skip_button"
            style="@style/Widget.NoteUp.Button.Utility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/do_not_show_again" />

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/previous_button"
            style="@style/Widget.NoteUp.Button.Utility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/previous" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/next_button"
            style="@style/Widget.NoteUp.Button.Primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_small"
            android:text="@string/next" />
    </LinearLayout>
</LinearLayout>
